--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "firebase": "^5.5.9",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-router-flux": "^4.0.6",
     "react-redux": "^5.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
